# LLM_Frames_Paper

./: .gitignore  LLM_Frame_Paper_link_to_files.md  Manuscript.ipynb  Manuscript.qmd  PaperDraft_1_Safe application of Large Language Models in Educational Setting through a frame engine in 4 slots.md  Scientific_Reports_Paper.tex  references.bib
CE_feedback/: paper.md  (+2 more)
frame_engine_v1.1.2/code/: CHANGES_20251210_terminal_logging_fix.md  CHANGES_TERMINAL_LOG_SUPPORT.md  README.md  pyproject.toml
frame_engine_v1.1.2/code/.streamlit/: secrets.toml.example
frame_engine_v1.1.2/code/scripts/: config.yaml  frontend.py  requirements.txt
frame_engine_v1.1.2/code/sessions/: session_Microcontrollers_20251210_085747.md  session_Microcontrollers_20251210_085747.yaml  session_Microcontrollers_20251210_085747_prompts.json  session_Microcontrollers_20251210_111048.md  session_Microcontrollers_20251210_111048.yaml  session_Microcontrollers_20251210_111048_prompts.json  session_Microcontrollers_20251210_133400.md  session_Microcontrollers_20251210_133400.yaml  session_Microcontrollers_20251210_133400_prompts.json  session_Microcontrollers_20251215_130728_terminal_log.md
frame_engine_v1.1.2/code/sessions/archive/: session_Microcontrollers_20251202_152410.md  session_Microcontrollers_20251202_152410.yaml  (+58 more)
frame_engine_v1.1.2/code/simulations/: run_simulation.py
frame_engine_v1.1.2/code/tests/: config.yaml  conftest.py  requirements.md  test_balanced_turns.py  test_comprehension_tracker.py  test_engine.py  test_language_checker.py  test_llm.py  test_marty.py  test_phases_checker.py
(+259 files in other folders)
